--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -13,7 +13,7 @@
         </form>
         <div class="border-top pt-3">
             <small class="text-muted">
-                Don't have an account?  <a class="ml-2" href="#">Sign Up now</a>
+                Don't have an account?  <a class="ml-2" href="{% url 'register' %}">Sign Up now</a>
             </small>
         </div>
     </div>
